# RiverService

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Dockerfile  README.md  RiverService.sln  docker-compose.yml  docker_instructions.txt  lightsail_launch_script.txt
RiverService/: CMakeLists.txt  RiverService.vcxproj  RiverService.vcxproj.filters  build_command.txt  main.cpp
RiverService/include/: akl_data_source.h  bop_data_source.h  data_source.h  data_store.h  ecan_data_source.h  feature.h  health_tracker.h  hilltop_data_source.h  horizons_data_source.h  kiwis_data_source.h  lat_lon.h  niwa_data_source.h  niwa_feature.h  observable.h  observation_store.h  observation_type.h  otago_data_source.h  otago_feature.h  sensor_obs.h  server.h  tasman_data_source.h  utils.h
RiverService/src/: data_source.cpp  data_store.cpp  feature.cpp  server.cpp  utils.cpp
server_files/: nginx.conf  update_script.sh
tests/: main.cpp  test_feature.cpp  test_utils.cpp
tests/mocks/: mock_client.hpp
